# Forest

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Explanation.txt  LICENSE  Makefile  README.md  cmake_install.cmake  frstconfig
Examples/: alloc.tree  array-test.tree  controlflow-test.tree  example.tree  fibonacci.tree  file-io.tree  hello-world.tree  if-test.tree  libc.tree  main.tree  print-first-arg.tree  print69.tree  range-test.tree  rule110.tree  seq100.tree  struct-test.tree
Examples/Buffers/: frstconfig  main.tree
Examples/Classes/: class-test.tree  extra-classes.tree  frstconfig
Examples/Multiple_Files/: fileread.tree  frstconfig  malloc.tree  test.tree
Examples/Structs/: frstconfig  struct-test.tree
Self-Host/: Forest.tree
Source/: CMakeLists.txt  Parser.cpp  Parser.hpp  Tokeniser.cpp  Tokeniser.h  X86_64LinuxYasmCompiler.cpp  X86_64LinuxYasmCompiler.hpp  compiler  main.cpp
Source/Parser/: CMakeLists.txt  ConfigParser.cpp  ConfigParser.hpp  Expression.cpp  Expression.hpp  Node.cpp  Node.hpp  Parser.cpp  Parser.hpp
Source/Tests/: CMakeLists.txt  ParserTests.cpp  Testing_testing.cpp  TokeniserTests.cpp
Source/Tokeniser/: CMakeLists.txt  Tokeniser.cpp  Tokeniser.hpp
